--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,9 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "C_Cpp.errorSquiggles": "enabled"
+  "C_Cpp.errorSquiggles": "enabled",
+  "files.associations": {
+    "xlocmes": "cpp",
+    "istream": "cpp"
+  }
 }
