--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,6 @@
   "files.associations": {
     "xlocmes": "cpp",
     "istream": "cpp"
-  }
+  },
+  "cmake.sourceDirectory": "C:/Users/Naervern/Documents/GitHub/meteo-nano/src"
 }
